--- a/views/partials/layouts/base.hbs
+++ b/views/partials/layouts/base.hbs
@@ -36,6 +36,9 @@
   {{/modal-block }}
 
 
+  <script src="js/jquery-1.10.2.min.js"></script>
+  <script src="js/jquery-migrate-1.2.1.js"></script>
+  <script src="js/preload.min.js"></script>
   {{#> scripts-block }}
   {{/scripts-block }}
    <script>
