--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -27,8 +27,8 @@
         <button id="btnSignUp" class="btn btn-primary btn-block">注册</button>
 
         <div class="text-center">
-          <a class="d-block small mt-3" href="signin.html">登录</a>
-          <a class="d-block small" href="forgot-password.html">忘记密码？</a>
+          <a class="d-block small mt-3" href="/signin">登录</a>
+          <a class="d-block small" href="/forgot-password">忘记密码？</a>
         </div>
       </div>
     </div>
