--- a/views/partials/includes/nav.hbs
+++ b/views/partials/includes/nav.hbs
@@ -38,11 +38,13 @@
                             <a href="#subscribe">Subscribe</a>
                         </li>-->
                        <!--登录前-->
-                         <div class="header_profile"> <a class="log_aa" href="">登录</a><a class="reg_aa" href="">注册</a></div>
-                         <!--登录前-->
-                         <!--登录后-->
-                         <div class="header_profile" style="display: none"> <a class="user_a" href=""><i class="fa fa-user-circle" aria-hidden="true"></i>Samer Hassan</a></div>
-                         <!--登录后-->
+                       <li id="li_signin">
+                           <a href="/signin">{{ translation.SIGNIN }}</a>
+                       </li>
+
+                       <li id="li_profile" class="header_profile" style="display: none">
+                            <a class="user_a" href="/profile"><i class="fa fa-user-circle" aria-hidden="true"></i><span id="username"></span></a>
+                       </li>
                     </ul>
                     <!--end nav -->
 
