--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -119,7 +119,7 @@
                 <div class="dui_huan_title">兑换码输入</div>
                 <div class="dui_huan_con">
                     <ul id="voucherList" class="dui_huan_ul">
-                        <li id="voucherInput" class="clear_after"><div class="label"><input type="radio" class="radio_li" name="voucher"></div><div class="li_r"><input class="text" type="text" placeholder="手动输入兑换码"></div></li>
+                        <li style="display:none;" id="voucherInput" class="clear_after"><div class="label"><input type="radio" class="radio_li" name="voucher"></div><div class="li_r"><input class="text" type="text" placeholder="手动输入兑换码"></div></li>
                     </ul>
                     <div class="dui_huan_button">
                         <button id="btnVoucherPay" class="but lan" >确认</button>
