fix the poster issue

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -788,7 +788,7 @@
         <!-- Modal content -->
         <div class="modal-content">
           <span class="close">&times;</span>
-          <a href="./minerEn.html">
+          <a href="./miner">
                 <img src="images/poster.jpg" id="poster">
           </a>
           <!-- <div style="width: 100px;height: 50px;border: 1px solid red;position: absolute;bottom: 10px;"></div> -->
