fix profile wrong name issue

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -17,7 +17,7 @@
                 <div id="outer">
                     <div id="tab">
                     <div class="img"><img src="images/15.jpg"></div>
-                    <div class="name text_align_center">Tiago M. Fernández-Caramés</div>
+                    <div class="name text_align_center"><span id="profile_name"></span></div>
                     <ul class="clearfix">
                         <li class="current"><i class="fa fa-tags" aria-hidden="true"></i>订单</li>
                         <li><i class="fa fa-gift" aria-hidden="true"></i>兑换码</li>
