--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -6,11 +6,11 @@
       <div class="card-body">
         <div class="form-group">
           <label for="username">{{ translation.SIGNIN_USERNAME }}</label>
-          <input id="username" class="form-control" type="username" aria-describedby="usernameHelp" placeholder="请输入用户名">
+          <input id="username" class="form-control" type="username" aria-describedby="usernameHelp">
         </div>
         <div class="form-group">
           <label for="password">{{ translation.SIGNIN_PASSWORD }}</label>
-          <input id="password" class="form-control" type="password" placeholder="请输入密码">
+          <input id="password" class="form-control" type="password">
         </div>
         <div class="form-group">
           <div class="form-check">
