--- a/views/order_detail.hbs
+++ b/views/order_detail.hbs
@@ -66,6 +66,12 @@
                         <p id="vocher"></p>
                     </div>
                 </div>
+
+
+                <div class="sub_order_bill_title">Disclaimer</div>
+                <div class="sub_order_deli sub_order_ship">
+                    {{ translation.DISCLAIMER }}
+                </div>
             </div>
             <!--sub_order_bill end-->
             </div>
