--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -43,7 +43,8 @@
                             </div>
                         </td>
                         <td class="price">￥100</td>
-                        <td class="num"><input class="num_input" type="text" value="1"></td>
+                        {{!-- <td class="num"><input class="num_input" type="text" value="1"></td> --}}
+                        <td class="num"><span>1<span></td>
                         <td class="price_total">
                             ￥100
                         </td>
@@ -116,14 +117,14 @@
     <div class="cd-popup2">
         <div class="cd-popup-container1">
             <div class="dui_huan">
-                <div class="dui_huan_title">兑换码输入</div>
+                <div class="dui_huan_title">{{ translation.CART_PANEL_VOUCHER_TITLE }} </div>
                 <div class="dui_huan_con">
                     <ul id="voucherList" class="dui_huan_ul">
                         <li style="display:none;" id="voucherInput" class="clear_after"><div class="label"><input type="radio" class="radio_li" name="voucher"></div><div class="li_r"><input class="text" type="text" placeholder="手动输入兑换码"></div></li>
                     </ul>
                     <div class="dui_huan_button">
-                        <button id="btnVoucherPay" class="but lan" >确认</button>
-                        <a class="but hui" href="">取消</a>
+                        <button id="btnVoucherPay" class="but lan" >{{ translation.CART_PANEL_VOUCHER_SUBMIT }}</button>
+                        <a class="but hui" href="">{{ translation.CART_PANEL_VOUCHER_CANCEL }}</a>
                     </div>
                 </div>
             </div>
